<resources>
    <string name="app_name">"         InK-PeN"</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit">InK-PeN</string>
    <string name="action_note">Quick Insert</string>
    <string name="menu_share">Share</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="action_about">About</string>
    <string name="about_title">InK-Pen</string>
    <string name="about_content">A Retired Retard production</string>
    <string name="action_backup">Backup</string>
    <string name="action_restore">Restore</string>
    <string name="menu_notify">Notify</string>
    <string name="menu_denotify">Denotify</string>
</resources>
