<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/INSERT_QUICK"
        android:icon="@drawable/fab_ic_add"
        android:orderInCategory="200"
        android:title="@string/action_note"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/BACKUP"
        android:orderInCategory="300"
        android:title="@string/action_backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/RESTORE"
        android:orderInCategory="400"
        android:title="@string/action_restore"
        app:showAsAction="never" />
    <item
        android:id="@+id/ABOUT"
        android:orderInCategory="500"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
