<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditActivity">

    <item
        android:id="@+id/SHARE"
        android:orderInCategory="100"
        android:title="@string/menu_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/DELETE"
        android:orderInCategory="200"
        android:title="@string/menu_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/NOTIFY"
        android:orderInCategory="300"
        android:title="@string/menu_notify"
        app:showAsAction="never" />
    <item
        android:id="@+id/DENOTIFY"
        android:orderInCategory="300"
        android:title="@string/menu_denotify"
        app:showAsAction="never" />

</menu>